[package]
name = "pulsar2"
version = "0.5.1"
edition = "2024"
authors = ["Artur Gwoździowski"]
description = "A simple signaling server helping to establish WebRTC connections"

[dependencies]
anyhow = "1.0.101"
colored = "3.1.1"
futures-channel = "0.3.32"
futures-util = "0.3.32"
rand = "0.10.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"

[build-dependencies]
embed-resource = "3.0.6"



[[bin]]
name = "pulsar2"
path = "/src/main.rs"